--- a/paper/body.tex
+++ b/paper/body.tex
@@ -758,35 +758,36 @@ One can construct the two circuits in~the program as~follows.
 %\draw[help lines] (0,0) grid (9,5);
 
 
-\node[input] (x1) at (0, 4) {$x_{1}$};
+\node[input] (x1) at (0, 3.5) {$x_{1}$};
 \foreach \n/\x/\y in {2/1.5/5, 3/3/5, 4/4.5/5, 11/7.5/5, 12/9/5}
   \node[input] (x\n) at (\x, \y) {$x_{\n}$};
 
+\node at (6,3.5) {$\dotsb$};
 \foreach \x/\y/\z in {1/2/1.5, 2.5/3.5/3, 4/5/4.5, 7/8/7.5} {
-  \draw (\x,3.8) rectangle (\y,4.2);
-  \node at (\z,4) {SORT};
+  \draw (\x,2.8) rectangle (\y,4.2);
+  \node[rotate=90] at (\z,3.5) {sort};
 }
 
-\node[gate] (g1) at (9,4) {$\land$};
-\node[gate] (g2) at (5,2) {$\lor$};
+\node[gate] (g1) at (9,3.5) {$\land$};
+\node[gate] (g2) at (7.5,2) {$\lor$};
 
-\draw[->] (x1) -- (1,4);
+\draw[->] (x1) -- (1,3.5);
 \draw[->] (x2) -- (1.5,4.2);
 \draw[->] (x3) -- (3,4.2);
 \draw[->] (x4) -- (4.5,4.2);
 \draw[->] (x11) -- (7.5,4.2);
 \draw[->] (x12) -- (g1);
 
-\draw[->] (2,4) -- (2.5,4);
-\draw[->] (3.5,4) -- (4,4);
-\draw[->] (5,4) -- (5.5,4);
-\draw[->] (6.5,4) -- (7,4);
-\draw[->] (8,4) -- (g1);
+\draw[->] (2,3.5) -- (2.5,3.5);
+\draw[->] (3.5,3.5) -- (4,3.5);
+\draw[->] (5,3.5) -- (5.5,3.5);
+\draw[->] (6.5,3.5) -- (7,3.5);
+\draw[->] (8,3.5) -- (g1);
 
-\draw[->] (1.5,3.8) -- (g2);
-\draw[->] (3,3.8) -- (g2);
-\draw[->] (4.5,3.8) -- (g2);
-\draw[->] (7.5,3.8) -- (g2);
+\draw[->] (1.5,2.8) -- (g2);
+\draw[->] (3,2.8) -- (g2);
+\draw[->] (4.5,2.8) -- (g2);
+\draw[->] (7.5,2.8) -- (g2);
 \draw[->] (g1) -- (g2);
 
 \foreach \f/\t in {}
@@ -794,8 +795,8 @@ One can construct the two circuits in~the program as~follows.
 \end{scope}
 \end{mypic}
 
-\caption{A~circuit of~size~$31$ for~$\THR_{12}^2$: 
-(a)~block structure and (b)~gate structure. 
+\caption{A~circuit of~size~$31$ for~$\THR_{12}^2$:
+(a)~block structure and (b)~gate structure.
 The $\operatorname{SORT}(u,v)$ block sorts two input bits
 as~follows: $\operatorname{SORT}(u,v)=(\min\{u,v\}, \max\{u,v\})=(u \land v, u \lor v)$. The circuit performs
 one and a~half iterations of~the bubble sort algorithm:
@@ -829,9 +830,9 @@ In~general, this leads to~a~circuit of~size $3n-5$.}
 \node[input] (x3) at (7.5, 6) {$x_3$};
 \node[gate] (g0) at (8.5,6) {$\lor$};
 
-\node[gate, label=left:$r_1$] (g10) at (1,5) {$\lor$};
+\node[gate, label={[shift={(-0.4,-0.4)}]$c_1$}] (g10) at (1,5) {$\lor$};
 \node[gate] (g6) at (2,5) {$\lor$};
-\node[gate, label={[shift={(0.4,-0.8)}]$r_2$}] (g12) at (3,5) {$\lor$};
+\node[gate, label={[shift={(0.4,-0.74)}]$c_2$}] (g12) at (3,5) {$\lor$};
 \node[input] (x11) at (4, 5) {$x_{11}$};
 \node[gate] (g4) at (5,5) {$\lor$};
 \node[gate] (g13) at (6,5) {$\lor$};
@@ -842,21 +843,21 @@ In~general, this leads to~a~circuit of~size $3n-5$.}
 \node[gate] (g22) at (1.5,4) {$\land$};
 \node[gate] (g21) at (2.5,4) {$\lor$};
 \node[gate] (g7) at (3.5,4) {$\lor$};
-\node[gate, label={[shift={(0.08,-0.06)}]$r_3$}] (g14) at (4.5,4) {$\lor$};
+\node[gate, label={[shift={(0.08,-0.18)}]$c_3$}] (g14) at (4.5,4) {$\lor$};
 \node[input] (x12) at (5.5, 4) {$x_{12}$};
-\node[gate, label={[shift={(-0.1,-0.06)}]$c_2$}] (g5) at (6.5,4) {$\lor$};
-\node[gate] (g15) at (7.5,4) {$\lor$};
-\node[gate, label=right:$c_1$] (g2) at (8.5,4) {$\lor$};
+\node[gate, label={[shift={(0.45,-0.50)}]$r_2$}] (g5) at (6.5,4) {$\lor$};
+\node[gate] (g15) at (8,4) {$\lor$};
+\node[gate, label=right:$r_1$] (g2) at (9,4) {$\lor$};
 
 
-\node[gate] (g24) at (2.5,3) {$\land$};
-\node[gate] (g23) at (3.5,3) {$\lor$};
-\node[gate, label={[shift={(-0.1,-0.06)}]$c_3$}] (g8) at (4.5,3) {$\lor$};
-\node[gate, label={[shift={(0.3,-0.06)}]$r_4$}] (g16) at (5.5,3) {$\lor$};
-\node[gate] (g17) at (6.5,3) {$\lor$};
-\node[gate] (g18) at (7.5,3) {$\land$};
+\node[gate] (g24) at (2,3) {$\land$};
+\node[gate] (g23) at (3,2.6) {$\lor$};
+\node[gate, label={[shift={(-0.45,-0.5)}]$r_3$}] (g8) at (4.5,3) {$\lor$};
+\node[gate, label={[shift={(0.28,-0.2)}]$c_4$}] (g16) at (5.5,3) {$\lor$};
+\node[gate] (g17) at (7,3) {$\lor$};
+\node[gate] (g18) at (8,3) {$\land$};
 
-\node[gate] (g25) at (2.5,2) {$\lor$};
+\node[gate] (g25) at (1.5,2) {$\lor$};
 \node[gate] (g26) at (4,2) {$\land$};
 \node[gate] (g19) at (5,2) {$\land$};
 
@@ -884,31 +885,31 @@ In~general, this leads to~a~circuit of~size $3n-5$.}
   \node[input] (x\n) at (\x,\y) {$x_{\n}$};
 
 \foreach \n/\x/\y in {1/5.5/7, 2/5.5/6, 3/5.5/5}
-  \node[gate, label={[shift={(0.3,-0.2)}]$c_\n$}] (c\n) at (\x, \y) {$\lor$};
-\draw[->] (4.5,7)--(c1);
-\draw[->] (4.5,6)--(c2);
-\draw[->] (4.5,5)--(c3);
+  \node[gate, label={[shift={(0.3,-0.2)}]$r_\n$}] (r\n) at (\x, \y) {$\lor$};
+\draw[->] (4.5,7)--(r1);
+\draw[->] (4.5,6)--(r2);
+\draw[->] (4.5,5)--(r3);
 
 
 \foreach \n/\x/\y in {1/1/3.5, 2/2/3.5, 3/3/3.5, 4/4/3.5}
-  \node[gate, label={[shift={(0.3,-0.2)}]$r_\n$}] (r\n) at (\x, \y) {$\lor$};
-\draw[->] (1,4.5)--(r1);
-\draw[->] (2,4.5)--(r2);
-\draw[->] (3,4.5)--(r3);
-\draw[->] (4,4.5)--(r4);
+  \node[gate, label={[shift={(0.3,-0.2)}]$c_\n$}] (c\n) at (\x, \y) {$\lor$};
+\draw[->] (1,4.5)--(c1);
+\draw[->] (2,4.5)--(c2);
+\draw[->] (3,4.5)--(c3);
+\draw[->] (4,4.5)--(c4);
 
-\draw (0.5,1.5) rectangle (4.5,2.5); 
+\draw (0.5,1.5) rectangle (4.5,2.5);
 \node at (2.5,2) {$\THR_2^4$};
-\draw[->] (r1) -- (1,2.5);
-\draw[->] (r2) -- (2,2.5);
-\draw[->] (r3) -- (3,2.5);
-\draw[->] (r4) -- (4,2.5);
+\draw[->] (c1) -- (1,2.5);
+\draw[->] (c2) -- (2,2.5);
+\draw[->] (c3) -- (3,2.5);
+\draw[->] (c4) -- (4,2.5);
 
-\draw (6.5,4.5) rectangle (7.5,7.5); 
+\draw (6.5,4.5) rectangle (7.5,7.5);
 \node[rotate=90] at (7,6) {$\THR_2^3$};
-\draw[->] (c1) -- (6.5,7);
-\draw[->] (c2) -- (6.5,6);
-\draw[->] (c3) -- (6.5,5);
+\draw[->] (r1) -- (6.5,7);
+\draw[->] (r2) -- (6.5,6);
+\draw[->] (r3) -- (6.5,5);
 
 \node[gate] (g) at (7, 2) {$\lor$};
 \draw[->] (4.5,2)--(g);
