--- a/paper/main_lipics.tex
+++ b/paper/main_lipics.tex
@@ -21,7 +21,7 @@
 
 \author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{Supported by Russian Science Foundation (18-71-10042).}
 
-\author{Nikita Slezkin}{St.~Petersburg State University}{ne.slezkin@gmail.com}{}{}
+\author{Nikita Slezkin}{St.~Petersburg State University}{ne.slezkin@gmail.com}{https://orcid.org/0000-0003-1904-9261}{}
 
 \authorrunning{A.\,S. Kulikov and N. Slezkin} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
 
