--- a/paper/body.tex
+++ b/paper/body.tex
@@ -801,7 +801,7 @@ The $\operatorname{SORT}(u,v)$ block sorts two input bits
 as~follows: $\operatorname{SORT}(u,v)=(\min\{u,v\}, \max\{u,v\})=(u \land v, u \lor v)$. The circuit performs
 one and a~half iterations of~the bubble sort algorithm:
 one first finds the maximum bit among $n$~input bits; then,
-it~remains to~compute the disjunction of the remaining $n-1$ bits to~check whether there~is at~least one~$1$.
+it~remains to~compute the disjunction of the remaining $n-1$ bits to~check whether there~is at~least one~$1$ among them.
 In~general, this leads to~a~circuit of~size $3n-5$.}
 \label{figure:thr31}
 \end{figure}
