--- a/paper/body.tex
+++ b/paper/body.tex
@@ -19,7 +19,13 @@ any of them can be improved by reducing to~SAT.
 This may be viewed
 as a~local search approach: we search for a~smaller
 circuit in a~ball around a~given circuit.
-We~report the results of experiments with various symmetric functions. 
+%We~report the results of experiments with various 
+%symmetric functions. 
+Through this approach, we~prove
+new upper bounds on the circuit size of~some
+symmetric functions. We~also demonstrate that
+some upper bounds that we~proved by~hand
+decades ago, nowadays can be~found automatically.
 \end{abstract}
 
 %\tableofcontents
@@ -180,8 +186,8 @@ All the code shown below
 can be~found in~the
 file \texttt{tutorial.py} at~\cite{git-improvement}.
 One may run~it after installing a~few \texttt{Python} modules. Alternatively, one may run the Jupyter notebook
-\texttt{tutorial.ipynb} in~the cloud without installing
-anything. To~do this, press the badge ``Colab''
+\texttt{tutorial.ipynb} in~the cloud (without installing
+anything) by pressing the badge ``Colab''
 at~\cite{git-improvement}.
 
 \subsection{Manipulating Circuits}
