--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,95 @@
+@inproceedings{AAAI2,
+  author    = {André Schidler and Stefan Szeider},
+  title     = {SAT-based Decision Tree	
+Learning for Large Data
+Sets},
+  booktitle = {The Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
+               2021},
+%  pages     = {3906--3913},
+  publisher = {{AAAI} Press},
+  year      = {2021},
+%  url       = {https://aaai.org/ojs/index.php/AAAI/article/view/5804},
+%  timestamp = {Tue, 02 Feb 2021 07:59:54 +0100},
+%  biburl    = {https://dblp.org/rec/conf/aaai/GanianKOS20.bib},
+%  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{AAAI1,
+  author    = {Vaidyanathan Peruvemba Ramaswamy and Stefan Szeider},
+  title     = {Turbocharging Treewidth-Bounded Bayesian Network Structure Learning},
+  booktitle = {The Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
+               2021},
+%  pages     = {3906--3913},
+  publisher = {{AAAI} Press},
+  year      = {2021},
+%  url       = {https://aaai.org/ojs/index.php/AAAI/article/view/5804},
+%  timestamp = {Tue, 02 Feb 2021 07:59:54 +0100},
+%  biburl    = {https://dblp.org/rec/conf/aaai/GanianKOS20.bib},
+%  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sat/FichteLS17,
+  author    = {Johannes Klaus Fichte and
+               Neha Lodha and
+               Stefan Szeider},
+  editor    = {Serge Gaspers and
+               Toby Walsh},
+  title     = {SAT-Based Local Improvement for Finding Tree Decompositions of Small
+               Width},
+  booktitle = {Theory and Applications of Satisfiability Testing - {SAT} 2017 - 20th
+               International Conference, Melbourne, VIC, Australia, August 28 - September
+               1, 2017, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {10491},
+  pages     = {401--411},
+  publisher = {Springer},
+  year      = {2017},
+  url       = {https://doi.org/10.1007/978-3-319-66263-3\_25},
+  doi       = {10.1007/978-3-319-66263-3\_25},
+  timestamp = {Tue, 14 May 2019 10:00:41 +0200},
+  biburl    = {https://dblp.org/rec/conf/sat/FichteLS17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cp/RamaswamyS20,
+  author    = {Vaidyanathan Peruvemba Ramaswamy and
+               Stefan Szeider},
+  editor    = {Helmut Simonis},
+  title     = {MaxSAT-Based Postprocessing for Treedepth},
+  booktitle = {Principles and Practice of Constraint Programming - 26th International
+               Conference, {CP} 2020, Louvain-la-Neuve, Belgium, September 7-11,
+               2020, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12333},
+  pages     = {478--495},
+  publisher = {Springer},
+  year      = {2020},
+  url       = {https://doi.org/10.1007/978-3-030-58475-7\_28},
+  doi       = {10.1007/978-3-030-58475-7\_28},
+  timestamp = {Sat, 19 Sep 2020 13:19:45 +0200},
+  biburl    = {https://dblp.org/rec/conf/cp/RamaswamyS20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/tocl/LodhaOS19,
+  author    = {Neha Lodha and
+               Sebastian Ordyniak and
+               Stefan Szeider},
+  title     = {A {SAT} Approach to Branchwidth},
+  journal   = {{ACM} Trans. Comput. Log.},
+  volume    = {20},
+  number    = {3},
+  pages     = {15:1--15:24},
+  year      = {2019},
+  url       = {https://doi.org/10.1145/3326159},
+  doi       = {10.1145/3326159},
+  timestamp = {Wed, 07 Aug 2019 15:53:28 +0200},
+  biburl    = {https://dblp.org/rec/journals/tocl/LodhaOS19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
 @inproceedings{DBLP:conf/date/Kulikov18,
   author    = {Alexander S. Kulikov},
   editor    = {Jan Madsen and
