--- a/paper/body.tex
+++ b/paper/body.tex
@@ -328,23 +328,23 @@ of~this approach on several datasets.
 
 \begin{table}[ht]
 \begin{center}
-\begin{tabular}{llll}
+\begin{tabular}{lllr}
 \toprule
-function & circuit size & status & time\\
+function & circuit size & status & time (sec.)\\
 \midrule
-$\SUM_5$ & 12 & SAT & 56.7726 sec\\
-$\SUM_5$ & 11 & SAT & 26782 sec\\
-$\SUM_5$ & 10 & UNSAT & * \\
-$\MOD_4^{3,0}$ & $7$ & SAT & 0.3948 sec\\
-$\MOD_4^{3,0}$ & $6$ & UNSAT & 4472.8590 sec\\
-$\MOD_4^{3,1}$ & $7$ & SAT & 0.4643 sec\\
-$\MOD_4^{3,1}$ & $6$ & UNSAT & 60.1429 sec\\
-$\MOD_4^{3,2}$ & $6$ & SAT & 0.3471 sec\\
-$\MOD_4^{3,2}$ & $5$ & UNSAT & 0.6956 sec\\
+$\SUM_5$ & 12 & SAT & 56.8\\
+$\SUM_5$ & 11 & SAT & 26782.0\\
+%$\SUM_5$ & 10 & UNSAT & * \\
+$\MOD_4^{3,0}$ & $7$ & SAT & 0.4\\
+$\MOD_4^{3,0}$ & $6$ & UNSAT & 4472.9\\
+$\MOD_4^{3,1}$ & $7$ & SAT & 0.5\\
+$\MOD_4^{3,1}$ & $6$ & UNSAT & 60.2\\
+$\MOD_4^{3,2}$ & $6$ & SAT & 0.4\\
+$\MOD_4^{3,2}$ & $5$ & UNSAT & 0.7\\
 
-$\MOD_5^{3,0}$ & $10$ & SAT & 268.8589 sec\\
-$\MOD_5^{3,1}$ & $9$ & SAT & 102.0609 sec\\
-$\MOD_5^{3,2}$ & $10$ & SAT & 221.9466 sec\\
+$\MOD_5^{3,0}$ & $10$ & SAT & 268.9\\
+$\MOD_5^{3,1}$ & $9$ & SAT & 102.1\\
+$\MOD_5^{3,2}$ & $10$ & SAT & 222.0\\
 \bottomrule
 \end{tabular}
 \end{center}
@@ -460,7 +460,7 @@ $\size(\SUM_{15}) \le 52$,
 it~would give a~better upper bound.
 
 The found circuits for $\SUM_n$ for $n \le 15$
-does not allow to~improve the strongest known upper bound
+do~not allow to~improve the strongest known upper bound
 $\size(\SUM_n) \le 4.5n+o(n)$ due to~Demenkov et al.~\cite{DBLP:journals/ipl/DemenkovKKY10}. Below,
 we~present several interesting observations on~the found circuits.
 
