add running time of improve_circuit

--- a/paper/body.tex
+++ b/paper/body.tex
@@ -376,12 +376,15 @@ of~the known circuits for $\SUM$ and $\MOD^3$.
 
 \begin{table}[ht]
 \begin{center}
-\begin{tabular}{llll}
+\begin{tabular}{llr}
 \toprule
-function & circuit size & time\\
+function & circuit size & time (sec.)\\
 \midrule
-$\SUM_5$ & $12 \to 11$ & ??? sec.\\
-$\SUM_7$ & $19 \to 18$ & ??? sec.\\
+$\SUM_5$ & $12 \to 11$ & 7.3\\
+$\SUM_7$ & $20 \to 19$ & 7.0\\
+$\MOD_6^{3,0}$ & $15 \to 14$ & 22.0\\
+$\MOD_6^{3,1}$ & $15 \to 14$ & 22.5\\
+$\MOD_6^{3,2}$ & $14 \to 13$ & 21.7\\
 \bottomrule
 \end{tabular}
 \end{center}
