Add mod3_7 running time

--- a/paper/body.tex
+++ b/paper/body.tex
@@ -385,6 +385,9 @@ $\SUM_7$ & $20 \to 19$ & 7.0\\
 $\MOD_6^{3,0}$ & $15 \to 14$ & 22.0\\
 $\MOD_6^{3,1}$ & $15 \to 14$ & 22.5\\
 $\MOD_6^{3,2}$ & $14 \to 13$ & 21.7\\
+$\MOD_7^{3,0}$ & $17 \to 16$ & 41.1\\
+$\MOD_7^{3,1}$ & $17 \to 16$ & 42.6\\
+$\MOD_7^{3,2}$ & $16 \to 15$ & 43.0\\
 \bottomrule
 \end{tabular}
 \end{center}
