--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,17 @@
+@article{DBLP:journals/eccc/KulikovS21,
+  author    = {Alexander S. Kulikov and
+               Nikita Slezkin},
+  title     = {SAT-based Circuit Local Improvement},
+  journal   = {Electron. Colloquium Comput. Complex.},
+  volume    = {28},
+  pages     = {44},
+  year      = {2021},
+  url       = {https://eccc.weizmann.ac.il/report/2021/044},
+  timestamp = {Tue, 30 Mar 2021 18:02:19 +0200},
+  biburl    = {https://dblp.org/rec/journals/eccc/KulikovS21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{AAAI2,
   author    = {André Schidler and Stefan Szeider},
   title     = {SAT-based Decision Tree	
