Replace two references

--- a/paper/body.tex
+++ b/paper/body.tex
@@ -184,8 +184,8 @@ structures:
 branchwidth~\cite{DBLP:journals/tocl/LodhaOS19},
 treewidth~\cite{DBLP:conf/sat/FichteLS17},
 treedepth~\cite{DBLP:conf/cp/RamaswamyS20},
-Bayesian network structure learning~\cite{AAAI1},
-decision tree learning~\cite{AAAI2}.
+Bayesian network structure learning~\cite{DBLP:conf/aaai/RamaswamyS21},
+decision tree learning~\cite{DBLP:conf/aaai/SchidlerS21}.
 
 \section{Program: Feature Overview and Evaluation}
 The program is~implemented in~\texttt{Python}.
