--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -12,34 +12,40 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{AAAI2,
-  author    = {André Schidler and Stefan Szeider},
-  title     = {SAT-based Decision Tree	
-Learning for Large Data
-Sets},
-  booktitle = {The Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
-               2021},
-%  pages     = {3906--3913},
-  publisher = {{AAAI} Press},
-  year      = {2021},
-%  url       = {https://aaai.org/ojs/index.php/AAAI/article/view/5804},
-%  timestamp = {Tue, 02 Feb 2021 07:59:54 +0100},
-%  biburl    = {https://dblp.org/rec/conf/aaai/GanianKOS20.bib},
-%  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{DBLP:conf/aaai/SchidlerS21,
+    author    = {Andr{\'{e}} Schidler and
+    Stefan Szeider},
+    title     = {SAT-based Decision Tree Learning for Large Data Sets},
+    booktitle = {Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
+    2021, Thirty-Third Conference on Innovative Applications of Artificial
+    Intelligence, {IAAI} 2021, The Eleventh Symposium on Educational Advances
+    in Artificial Intelligence, {EAAI} 2021, Virtual Event, February 2-9,
+    2021},
+    pages     = {3904--3912},
+    publisher = {{AAAI} Press},
+    year      = {2021},
+    url       = {https://ojs.aaai.org/index.php/AAAI/article/view/16509},
+    timestamp = {Wed, 02 Jun 2021 18:09:11 +0200},
+    biburl    = {https://dblp.org/rec/conf/aaai/SchidlerS21.bib},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{AAAI1,
-  author    = {Vaidyanathan Peruvemba Ramaswamy and Stefan Szeider},
-  title     = {Turbocharging Treewidth-Bounded Bayesian Network Structure Learning},
-  booktitle = {The Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
-               2021},
-%  pages     = {3906--3913},
-  publisher = {{AAAI} Press},
-  year      = {2021},
-%  url       = {https://aaai.org/ojs/index.php/AAAI/article/view/5804},
-%  timestamp = {Tue, 02 Feb 2021 07:59:54 +0100},
-%  biburl    = {https://dblp.org/rec/conf/aaai/GanianKOS20.bib},
-%  bibsource = {dblp computer science bibliography, https://dblp.org}
+@inproceedings{DBLP:conf/aaai/RamaswamyS21,
+    author    = {Vaidyanathan Peruvemba Ramaswamy and
+    Stefan Szeider},
+    title     = {Turbocharging Treewidth-Bounded Bayesian Network Structure Learning},
+    booktitle = {Thirty-Fifth {AAAI} Conference on Artificial Intelligence, {AAAI}
+    2021, Thirty-Third Conference on Innovative Applications of Artificial
+    Intelligence, {IAAI} 2021, The Eleventh Symposium on Educational Advances
+    in Artificial Intelligence, {EAAI} 2021, Virtual Event, February 2-9,
+    2021},
+    pages     = {3895--3903},
+    publisher = {{AAAI} Press},
+    year      = {2021},
+    url       = {https://ojs.aaai.org/index.php/AAAI/article/view/16508},
+    timestamp = {Wed, 02 Jun 2021 18:09:11 +0200},
+    biburl    = {https://dblp.org/rec/conf/aaai/RamaswamyS21.bib},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{DBLP:conf/sat/FichteLS17,
@@ -131,7 +137,7 @@ Sets},
             Mozafari, Fereshte and
             De Micheli, Giovanni},
   title = {The {EPFL} logic synthesis libraries},
-  archivePrefix = "arXiv", 
+  archivePrefix = "arXiv",
   note = {arXiv:1805.05121v2},
   year = 2019,
   month = nov
@@ -234,7 +240,7 @@ year = {2020},
  isbn = {0321534964, 9780321534965},
  edition = {1},
  publisher = {Addison-Wesley Professional},
-} 
+}
 
 @article{Shannon49,
   author = {Claude E. Shannon},
@@ -285,7 +291,7 @@ year = {2020},
  isbn = {0134397606, 9780134397603},
  edition = {1st},
  publisher = {Addison-Wesley Professional},
-} 
+}
 
 @article{DBLP:journals/ipl/DemenkovKKY10,
   author    = {Evgeny Demenkov and
@@ -352,7 +358,7 @@ year = {2020},
 }
 
 @phdthesis{Dunne84,
-  author       = {Paul E. Dunne}, 
+  author       = {Paul E. Dunne},
   title        = {Techniques for the analysis of monotone Boolean networks},
   school       = {University of Warwick},
   year         = {1984},
